# taski

./: Cargo.toml  README.adoc
src/: cli.yml  database.rs  main.rs
test/: taski.json
tests/: data.rs
