[package]
name = "taski"
version = "0.1.0"
authors = ["tamamu <tamamu.1r1s@gmail.com>"]
edition = "2018"

[dependencies]
dirs = "1.0.5"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0"
clap = { version = "~2.27.0", features = ["yaml"] }
sha1 = { version = "0.6.0", features = ["std"] }
